--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'bootstrap/dist/css/bootstrap.min.css';
+@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
+
+
+body {
+    font-family: Helvetica, Arial, sans-serif;
+    /* font-family: var(--font-family);Helvetica Neue,  */
+    margin: 0px;
+    padding: 0px;
+    height: 100%;
+}
+a {
+    text-decoration: none;
+}
